Fixes following the refactor of EngineNewPayloadV2Test
Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>