@@ -14,46 +14,35 @@
  */
 package org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.engine;
 
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hyperledger.besu.datatypes.HardforkId.MainnetHardforkId.CANCUN;
 import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.ExecutionEngineJsonRpcMethod.EngineStatus.INVALID;
 import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.engine.EngineTestSupport.fromErrorResp;
 import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.WithdrawalParameterTestFixture.WITHDRAWAL_PARAM_1;
 import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.RpcErrorType.INVALID_PARAMS;
-import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.RpcErrorType.INVALID_REQUEST;
-import static org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.RpcErrorType.UNSUPPORTED_FORK;
-import static org.mockito.Mockito.lenient;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.hyperledger.besu.datatypes.BlobGas;
-import org.hyperledger.besu.datatypes.parameters.UnsignedLongParameter;
 import org.hyperledger.besu.ethereum.BlockProcessingOutputs;
 import org.hyperledger.besu.ethereum.BlockProcessingResult;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.JsonRpcRequest;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.JsonRpcRequestContext;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.methods.ExecutionEngineJsonRpcMethod;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.ExecutionPayloadV2;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.parameters.WithdrawalParameter;
 import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcError;
-import org.hyperledger.besu.ethereum.api.jsonrpc.internal.response.JsonRpcResponse;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
+import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
 import org.hyperledger.besu.ethereum.core.Withdrawal;
-import org.hyperledger.besu.ethereum.mainnet.ScheduledProtocolSpec;
+import org.hyperledger.besu.ethereum.mainnet.BodyValidation;
 import org.hyperledger.besu.ethereum.mainnet.WithdrawalsValidator;
 import org.hyperledger.besu.metrics.noop.NoOpMetricsSystem;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
+import java.util.function.UnaryOperator;
 
-import org.apache.tuweni.bytes.Bytes32;
-import org.junit.jupiter.api.BeforeEach;
+import io.vertx.core.json.JsonObject;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -64,22 +53,9 @@ import org.mockito.quality.Strictness;
 @MockitoSettings(strictness = Strictness.LENIENT)
 public class EngineNewPayloadV2Test extends EngineNewPayloadV1Test {
 
-  protected Set<ScheduledProtocolSpec.Hardfork> supportedHardforks() {
-    return Set.of(shanghaiHardfork);
-  }
-
-  public EngineNewPayloadV2Test() {}
-
   @Override
-  @BeforeEach
-  public void before() {
-    super.before();
-    createMethod();
-  }
-
-  @Override
-  protected EngineNewPayloadV1 createMethodInstance() {
-    return new EngineNewPayloadV2(
+  protected EngineNewPayloadV1<?, ?> createMethodInstance() {
+    return new EngineNewPayloadV2<>(
         vertx,
         protocolSchedule,
         protocolContext,
@@ -92,6 +68,16 @@ public class EngineNewPayloadV2Test extends EngineNewPayloadV1Test {
   }
 
   @Override
+  protected long getMinSupportedTimestamp() {
+    return shanghaiHardfork.milestone();
+  }
+
+  @Override
+  protected long getMaxSupportedTimestamp() {
+    return cancunHardfork.milestone() - 1;
+  }
+
+  @Override
   @Test
   public void shouldReturnExpectedMethodName() {
     assertThat(method.getName()).isEqualTo("engine_newPayloadV2");
@@ -99,52 +85,39 @@ public class EngineNewPayloadV2Test extends EngineNewPayloadV1Test {
 
   @Test
   public void shouldReturnValidIfWithdrawalsIsNotNull_WhenWithdrawalsAllowed() {
-    final List<WithdrawalParameter> withdrawalsParam = List.of(WITHDRAWAL_PARAM_1);
     final List<Withdrawal> withdrawals = List.of(WITHDRAWAL_PARAM_1.toWithdrawal());
-    when(protocolSpec.getWithdrawalsValidator())
-        .thenReturn(new WithdrawalsValidator.AllowedWithdrawals());
     BlockHeader mockHeader =
         setupValidPayload(
+            getMinSupportedTimestamp(),
             new BlockProcessingResult(Optional.of(new BlockProcessingOutputs(null, List.of()))),
-            Optional.of(withdrawals));
-    lenient()
-        .when(blockchain.getBlockHeader(mockHeader.getParentHash()))
-        .thenReturn(Optional.of(mock(BlockHeader.class)));
-    var resp = resp(mockEnginePayload(mockHeader, Collections.emptyList(), withdrawalsParam));
+            withdrawals);
+    var resp = resp(mockEnginePayloadParam(mockHeader, emptyList(), withdrawals));
 
     assertValidResponse(mockHeader, resp);
   }
 
   @Test
   public void shouldReturnValidIfWithdrawalsIsNull_WhenWithdrawalsProhibited() {
-    final List<WithdrawalParameter> withdrawals = null;
-    when(protocolSpec.getWithdrawalsValidator())
-        .thenReturn(new WithdrawalsValidator.ProhibitedWithdrawals());
+    final List<Withdrawal> withdrawals = null;
     BlockHeader mockHeader =
         setupValidPayload(
+            getMinSupportedTimestamp() / 2,
             new BlockProcessingResult(Optional.of(new BlockProcessingOutputs(null, List.of()))),
-            Optional.empty());
-    lenient()
-        .when(blockchain.getBlockHeader(mockHeader.getParentHash()))
-        .thenReturn(Optional.of(mock(BlockHeader.class)));
-    var resp = resp(mockEnginePayload(mockHeader, Collections.emptyList(), withdrawals));
+            withdrawals);
+    var resp = resp(mockEnginePayloadParam(mockHeader, emptyList(), withdrawals));
 
     assertValidResponse(mockHeader, resp);
   }
 
   @Test
   public void shouldReturnInvalidIfWithdrawalsIsNotNull_WhenWithdrawalsProhibited() {
-    final List<WithdrawalParameter> withdrawals = List.of();
-    lenient()
-        .when(protocolSpec.getWithdrawalsValidator())
-        .thenReturn(new WithdrawalsValidator.ProhibitedWithdrawals());
-
-    var resp =
-        resp(
-            mockEnginePayload(
-                createBlockHeader(Optional.of(Collections.emptyList())),
-                Collections.emptyList(),
-                withdrawals));
+    final List<Withdrawal> withdrawals = List.of();
+    BlockHeader mockHeader =
+        setupValidPayload(
+            getMinSupportedTimestamp() / 2,
+            new BlockProcessingResult(Optional.of(new BlockProcessingOutputs(null, List.of()))),
+            withdrawals);
+    var resp = resp(mockEnginePayloadParam(mockHeader, emptyList(), withdrawals));
 
     final JsonRpcError jsonRpcError = fromErrorResp(resp);
     assertThat(jsonRpcError.getCode()).isEqualTo(INVALID_PARAMS.getCode());
@@ -152,124 +125,86 @@ public class EngineNewPayloadV2Test extends EngineNewPayloadV1Test {
   }
 
   @Test
-  public void shouldValidateBlobGasUsedCorrectly() {
-    BlockHeader blockHeader =
-        createBlockHeaderFixture(Optional.of(Collections.emptyList()))
-            .blobGasUsed(100L)
-            .buildHeader();
-    final Map<String, Object> payload =
-        executionPayloadV2Json(blockHeader, Collections.emptyList(), List.of());
-    payload.put("blobGasUsed", "0x64");
-
-    var resp = resp(payload);
-    final JsonRpcError jsonRpcError = fromErrorResp(resp);
-    assertThat(jsonRpcError.getCode()).isEqualTo(INVALID_REQUEST.getCode());
-    verify(engineCallListener, times(1)).executionEngineCalled();
-  }
-
-  @Test
-  public void shouldValidateExcessBlobGasCorrectly() {
-    BlockHeader blockHeader =
-        createBlockHeaderFixture(Optional.of(Collections.emptyList()))
-            .excessBlobGas(BlobGas.MAX_BLOB_GAS)
-            .buildHeader();
-    final Map<String, Object> payload =
-        executionPayloadV2Json(blockHeader, Collections.emptyList(), List.of());
-    payload.put("excessBlobGas", BlobGas.MAX_BLOB_GAS.toHexString());
-
-    var resp = resp(payload);
-
-    final JsonRpcError jsonRpcError = fromErrorResp(resp);
-    assertThat(jsonRpcError.getCode()).isEqualTo(INVALID_REQUEST.getCode());
-    verify(engineCallListener, times(1)).executionEngineCalled();
-  }
-
-  @Test
   public void shouldReturnInvalidIfWithdrawalsIsNull_WhenWithdrawalsAllowed() {
-    final List<WithdrawalParameter> withdrawals = null;
-    when(protocolSpec.getWithdrawalsValidator())
-        .thenReturn(new WithdrawalsValidator.AllowedWithdrawals());
-
-    var resp =
-        resp(
-            mockEnginePayload(
-                createBlockHeader(Optional.empty()), Collections.emptyList(), withdrawals));
+    final List<Withdrawal> withdrawals = null;
+    BlockHeader mockHeader =
+        setupValidPayload(
+            getMinSupportedTimestamp(),
+            new BlockProcessingResult(Optional.of(new BlockProcessingOutputs(null, List.of()))),
+            withdrawals);
+    var resp = resp(mockEnginePayloadParam(mockHeader, emptyList(), withdrawals));
 
     assertThat(fromErrorResp(resp).getCode()).isEqualTo(INVALID_PARAMS.getCode());
     verify(engineCallListener, times(1)).executionEngineCalled();
   }
 
-  @Test
-  public void shouldReturnUnsupportedForkIfBlockTimestampIsAfterCancunMilestone() {
-    // Cancun started at timestamp 30
-    final long blockTimestamp = 31L;
-    BlockHeader blockHeader =
-        createBlockHeaderFixture(Optional.of(Collections.emptyList()))
-            .timestamp(blockTimestamp)
-            .buildHeader();
-
-    var resp = resp(mockEnginePayload(blockHeader, Collections.emptyList(), List.of()));
-
-    final JsonRpcError jsonRpcError = fromErrorResp(resp);
-    assertThat(jsonRpcError.getCode()).isEqualTo(UNSUPPORTED_FORK.getCode());
-    verify(engineCallListener, times(1)).executionEngineCalled();
+  protected Map<String, Object> mockEnginePayloadParam(
+      final BlockHeader header, final List<String> txs, final List<Withdrawal> withdrawals) {
+    var param = super.mockEnginePayloadParam(header, txs);
+    if (withdrawals != null) {
+      param.put(
+          "withdrawals",
+          withdrawals.stream()
+              .map(WithdrawalParameter::fromWithdrawal)
+              .map(WithdrawalParameter::asJsonObject)
+              .map(JsonObject::getMap)
+              .toList());
+    } else {
+      param.remove("withdrawals");
+    }
+    return param;
   }
 
   @Override
-  protected ExecutionPayloadV2 mockEnginePayload(final BlockHeader header, final List<String> txs) {
-    return executionPayloadV2(header, txs, null);
-  }
-
-  @Override
-  protected ExecutionPayloadV2 mockEnginePayload(
-      final BlockHeader header,
-      final List<String> txs,
-      final List<WithdrawalParameter> withdrawals) {
-    return executionPayloadV2(header, txs, withdrawals);
-  }
-
-  private JsonRpcResponse resp(final Map<String, Object> payload) {
-    return method.response(
-        new JsonRpcRequestContext(
-            new JsonRpcRequest("2.0", this.method.getName(), new Object[] {payload})));
-  }
-
-  private Map<String, Object> executionPayloadV2Json(
-      final BlockHeader header,
-      final List<String> txs,
-      final List<WithdrawalParameter> withdrawals) {
-    return new HashMap<>(
-        Map.ofEntries(
-            Map.entry("blockHash", header.getHash()),
-            Map.entry("parentHash", header.getParentHash()),
-            Map.entry("feeRecipient", header.getCoinbase()),
-            Map.entry("stateRoot", header.getStateRoot()),
-            Map.entry("blockNumber", new UnsignedLongParameter(header.getNumber())),
-            Map.entry("baseFeePerGas", header.getBaseFee().map(w -> w.toHexString()).orElse("0x0")),
-            Map.entry("gasLimit", new UnsignedLongParameter(header.getGasLimit())),
-            Map.entry("gasUsed", new UnsignedLongParameter(header.getGasUsed())),
-            Map.entry("timestamp", new UnsignedLongParameter(header.getTimestamp())),
-            Map.entry(
-                "extraData",
-                header.getExtraData() == null ? "0x" : header.getExtraData().toHexString()),
-            Map.entry("receiptsRoot", header.getReceiptsRoot()),
-            Map.entry("logsBloom", header.getLogsBloom()),
-            Map.entry("prevRandao", header.getPrevRandao().map(Bytes32::toHexString).orElse("0x0")),
-            Map.entry("transactions", txs),
-            Map.entry("withdrawals", withdrawals)));
-  }
-
-  @Override
-  protected ExecutionPayloadV2 mockEnginePayload(
-      final BlockHeader header,
-      final List<String> txs,
-      final List<WithdrawalParameter> withdrawals,
-      final String blockAccessList) {
-    return executionPayloadV2(header, txs, withdrawals);
+  protected void setDefaultExecutionPayloadFields(
+      final Map<String, Object> payload, final BlockHeader header, final List<String> txs) {
+    super.setDefaultExecutionPayloadFields(payload, header, txs);
+    if (header.getTimestamp() >= shanghaiHardfork.milestone()) {
+      payload.put("withdrawals", List.of());
+    }
   }
 
   @Override
   protected ExecutionEngineJsonRpcMethod.EngineStatus getExpectedInvalidBlockHashStatus() {
     return INVALID;
+  }
+
+  protected BlockHeader setupValidPayload(
+      final long timestamp, final BlockProcessingResult value, final List<Withdrawal> withdrawals) {
+
+    return setupValidPayload(timestamp, value, withdrawals, UnaryOperator.identity());
+  }
+
+  protected BlockHeader setupValidPayload(
+      final long timestamp,
+      final BlockProcessingResult value,
+      final List<Withdrawal> withdrawals,
+      final UnaryOperator<BlockHeaderTestFixture> versionSpecificModifier) {
+
+    return super.setupValidPayload(
+        timestamp,
+        value,
+        fixture -> versionSpecificModifier.apply(setWithdrawalsRoot(fixture, withdrawals)));
+  }
+
+  private BlockHeaderTestFixture setWithdrawalsRoot(
+      final BlockHeaderTestFixture fixture, final List<Withdrawal> withdrawals) {
+    return fixture.withdrawalsRoot(
+        withdrawals != null ? BodyValidation.withdrawalsRoot(withdrawals) : null);
+  }
+
+  @Override
+  protected BlockHeaderTestFixture versionSpecificBlockHeaderFixture(final long timestamp) {
+    BlockHeaderTestFixture baseFixture = super.versionSpecificBlockHeaderFixture(timestamp);
+    if (timestamp >= shanghaiHardfork.milestone()) {
+      baseFixture.withdrawalsRoot(BodyValidation.withdrawalsRoot(List.of()));
+      when(protocolSpec.getWithdrawalsValidator())
+          .thenReturn(new WithdrawalsValidator.AllowedWithdrawals());
+    } else {
+      baseFixture.withdrawalsRoot(null);
+      when(protocolSpec.getWithdrawalsValidator())
+          .thenReturn(new WithdrawalsValidator.ProhibitedWithdrawals());
+    }
+    return baseFixture;
   }
 }
